--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "angular-google-charts": "^0.1.6",
     "bootstrap": "^4.3.1",
+    "google-charts": "^2.0.0",
+    "highcharts": "^7.2.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
